fix: truncate long event titles.

--- a/src/app/modules/tasks/meetings/list/list.component.css
+++ b/src/app/modules/tasks/meetings/list/list.component.css
@@ -1,3 +1,16 @@
+.task-list__badges {
+  display: flex;
+  align-items: center;
+
+  flex-grow: 1;
+  flex-shrink: 0;
+  justify-content: flex-end;
+}
+
+.task-list__badges *:not(:last-child) {
+  margin-right: 8px;
+}
+
 .task-details__wrapper {
   display: flex;
   justify-content: space-between;
